# MinotaurMazeGame

./: .gitignore  CMakeLists.txt
assets/gimp files/: Dung_tileset.xcf  TX Tileset Grass.xcf  black_4.xcf  winner_bg.xcf
assets/map/: aboba.map
assets/shaders/: bg_blackout.frag  bg_shader.vert
include/: AssetManager.hpp  Button.hpp  Constants.hpp  Context.hpp  Game.hpp  GamePlay.hpp  MainMenu.hpp  State.hpp  StateManager.hpp  TextBox.hpp
include/Components/: AnimationComponent.hpp  HitboxComponent.hpp  MovementComponent.hpp
include/Constants/: AnimationParameters.hpp  AssetParamentes.hpp  Buttons.hpp  CameraState.hpp  Enums.hpp  GamePlayState.hpp  GameWinState.hpp  MainMenu.hpp  Map.hpp  MapEditor.hpp  MenuGuiElement.hpp  PauseMenu.hpp  PlayerParameters.hpp  TextureSelector.hpp  WindowParameters.hpp
include/Entities/: Entity.hpp  Player.hpp
include/GUIElements/: Button.hpp  Menu.hpp  TextureSelector.hpp
include/Interfaces/: LoadableInterface.hpp  SaveableInterface.hpp
include/Managers/: AssetManager.hpp  KeybindsManager.hpp  StateManager.hpp
include/Map/: Tile.hpp  TileMap.hpp  TileMapCore.hpp
include/Settings/: AnimationParameters.hpp  AssetParamentes.hpp  Buttons.hpp  CameraState.hpp  Enums.hpp  GamePlayState.hpp  GameWinState.hpp  MainMenu.hpp  Map.hpp  MapEditor.hpp  MenuGuiElement.hpp  PauseMenu.hpp  PlayerParameters.hpp  TextureSelector.hpp  (+1 more)
src/: AssetManager.cpp  Button.cpp  CMakeLists.txt  Context.cpp  Game.cpp  GamePlay.cpp  MainMenu.cpp  StateManager.cpp  TextBox.cpp  main.cpp
src/Components/: AnimationComponent.cpp  CMakeLists.txt  HitboxComponent.cpp  MovementComponent.cpp
src/Entities/: CMakeLists.txt  Entity.cpp  Player.cpp
src/GUIElements/: Button.cpp  CMakeLists.txt  Menu.cpp  TextureSelector.cpp
src/Managers/: AssetManager.cpp  CMakeLists.txt  KeybindsManager.cpp  StateManager.cpp
src/Map/: CMakeLists.txt  Tile.cpp  TileMap.cpp  TileMapCore.cpp
src/States/: CMakeLists.txt  GamePause.cpp  GamePlay.cpp  GameWin.cpp  MainMenu.cpp  MapEditor.cpp  PauseState.cpp
src/Utils/: CMakeLists.txt  Utils.cpp
(+11 files in other folders)
